# limlib-python

./: README.md  batcher.py  color.py  limlib.py  pyproject.toml  test.py
shaders/vertex/: sprite.vert
src/: batcher.py  limlib.py  test.py  test2.py
src/shaders/fragment/: sprite.frag
