[project]
name = "limlib"
version = "0.1.1"
description = "Fast library for rendering 2D graphics with optimizations for tens and hundreds of thousands of objects in a frame in Python, running on top of OpenGL (ModernGL)Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "glfw>=2.10.0",
    "moderngl>=5.12.0",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
]
